# libneoncl

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
libneoncl/: strings.c  strings.h
src/: ncl_string.c  ncl_string.h
tests/: tests.c
